--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <div id="main">
             <!-- header-->
             <header class="main-header">
-                <a class="logo-holder" href="index.html">
-                <img src="images/logo.svg"  alt="">
+                <a class="logo-holder" href="index.html" title="Angelia Developers">
+                    <img src="images/logo.svg"  alt="Angelia Logo">
                 </a>
                 <!-- nav-button-wrap-->
                 <div class="nav-button but-hol">
@@ -39,10 +39,10 @@
                 <!-- nav-button-wrap end-->
                 <div class="header-social">
                     <ul >
-                        <li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                        <li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                        <li><a href="#" target="_blank"><i class="fab fa-vk"></i></a></li>
+                        <li><a href="https://www.facebook.com/angeliadevelopers/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="https://www.instagram.com/angeliadevelopers/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="https://calendly.com/angeliadevelopers" target="_blank"><i class="fas fa-calendar-check"></i></a></li>
+                        <li><a href="https://angeliadevelopers.business.blog/" target="_blank"><i class="fab fa-wordpress"></i></a></li>
                     </ul>
                 </div>
                 <!--  showshare -->  
